--- a/netflix/src/components/Header/header.css
+++ b/netflix/src/components/Header/header.css
@@ -13,7 +13,7 @@
 
 .header_container {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-around;
   align-items: center;
   width: 100%;
   padding: 0 20px;
